remove some typo, update work experence

--- a/BaojunSu/BaojunSu-resume.tex
+++ b/BaojunSu/BaojunSu-resume.tex
@@ -24,7 +24,7 @@
 
 \section{Technical Ability}
 \cvitem{Programming Language}{Java, Python, C, Matlab.}
-\cvitem{Operating System}{Linux/Unix,including commands,toolchain,scirpts.}
+\cvitem{Operating System}{Linux/Unix,including commands,toolchain,scripts.}
 \cvitem{Profiling}{Algorithm profiling, system profiling.}
 \cvitem{Large-Scale Data Processing}{Youdao's Map-Reduce/Big Table implementation - Cowork,ODFS etc.}
 \cvitem{Data Mining}{Familiar with common models and algorithms of Data Mining, has in-depth study of online learning,text classification and recommender system.}
