--- a/JingZhao/赵晶-简历.tex
+++ b/JingZhao/赵晶-简历.tex
@@ -21,10 +21,10 @@
 \section{\fs{教育背景}}
 \cventry{2009--2012}{\textit{研究生}}{苏州大学}{无机化学}{GPA~前~5\%}{}
 \cventry{2005--2009}{\textit{本科}}{洛阳师范学院}{化学}{GPA~前~5\%}{}
-% 
-% \section{\fs{工作背景}}
-% \cventry{2012.07 -- 2012.08}{高级商务经理}{高阳捷迅信息技术有限公司}{北京}{}{商务拓展}
-% \cventry{2011.10 -- 2011.12}{策划(实习)}{革新百集传媒有限公司}{苏州}{}{文案策划、活动策划}
+
+\section{\fs{工作背景}}
+\cventry{2012.07 -- 2012.08}{高级商务经理}{高阳捷迅信息技术有限公司}{北京}{}{商务拓展}
+\cventry{2011.10 -- 2011.11}{猎头顾问助理}{科锐国际人力资源有限公司}{苏州}{}{市场调研}
 
 \section{\fs{个人能力}}
 \cvline{\kai{办公软件}}{能熟练使用~Word、Excel、PowerPoint、Photoshop}
