--- a/JingZhao/JingZhao-Resume.tex
+++ b/JingZhao/JingZhao-Resume.tex
@@ -15,26 +15,31 @@
 \maketitle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Basic Information}
-\cvcomputer{Name}{Jing Zhao}{Gender}{Famale}
+\cvcomputer{Name}{Jing Zhao}{Gender}{Female}
 \cvcomputer{Birthday}{1985-4-7}{}{}
 
 \section{Education}
-\cventry{2009--2012}{\textit{Graduate}}{Soochow University}{Inorganic Chemistry}{The top 5\% GPA}{}
-\cventry{2005--2009}{\textit{Undergraduate}}{Luoyang Normal University}{Chemistry}{The top 5\% GPA}{}
+\cventry{2009--2012}{\textit{Master}}{Soochow University}{Inorganic Chemistry}{The top 5\% GPA}{}
+\cventry{2005--2009}{\textit{Bachelor}}{Luoyang Normal University}{Chemistry}{The top 5\% GPA}{}
+
+\section{Work Experience}
+\cventry{2012.07 -- 2012.08}{Senior Business Manager}{Beijing Gaoyang Jiexun Information Technology Co., Ltd.}{Beijing}{}{Business Development}
+\cventry{2011.10 -- 2011.11}{Consultant Assistant}{Career International}{Suzhou}{}{Market Research}
+
 \section{Skill}
 \cvline{Office Software}{Proficiency in the use of Word, Excel, PowerPoint and Photoshop etc.}
 \cvline{English}{TOEIC: 600, CET 6: 437, Excellent spoken English ability and standard pronunciation.}
 \cvline{Soft Skills}{Good at organizing activities and verbal expression.}
 
 \section{Honour}
+\cvline{2012}{Gain 7 offers on Tianjin television's "You are the one!" program (2012.03.12).}
 \cvline{2011}{First Class Scholarship of Soochow University.}
 \cvline{2009}{Outstanding member of the CPR.}
-\cvline{2009}{Third place of Speech Competition hold by Soochow University.}
 \cvline{2006}{Title of `'Social Practice Advanced Individual" by Luoyang city.}
 
 \section{Research}
 \cvline{Projects}{Core member of two National Natural Science Foundation projects (No.20771077 and the other is Confidential).}
-\cvline{Papers}{Four papers indexed by SCI.}
+\cvline{Papers}{Seven papers indexed by SCI.}
 
 \section{Hobby}
 \cvline{}{I have a wide range of hobbies, especially for reading, listening to music, travelling and persisting in winter swimming.}
