--- a/BaojunSu/BaojunSu-resume.tex
+++ b/BaojunSu/BaojunSu-resume.tex
@@ -1,73 +1,71 @@
 \input{../Style/default}
 
-% personal data
+% Personal Data
 \firstname{Baojun}
 \familyname{Su}
 \mobile{+86(010)13439819854}
 \email{freizsu@gmail.com}
 \quote{Do everything seriously}
 
-%----------------------------------------------------------------------------------
-%                              content
-%----------------------------------------------------------------------------------
+% Content
 \begin{document}
 \maketitle
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Educational Background}
-\cventry{2008 -- 2011}{Master}{Zhejiang University}{Computer Application Technology}{}{}
-\cvline{Research Area: }{\small Large scale online learning/text classification/recommender system.}
-\cventry{2004 -- 2008}{Bachelor}{Jiangsu University of Science and Technology}{Information and Computing Sciences}{}{}
 
-\section{Work background}
-\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{Microsoft STCA}{Beijing}{}{display advertising/recommender system.}
-\cventry{2011.4 -- 2012.8}{Applied Research Engineer}{Netease Youdao}{Beijing}{}{crawler/parser/ranking.}
+\section{Educational Background}
+  \cventry{2008 -- 2011}{Master}{Zhejiang University}{Computer Application Technology}{}{}
+  \cvline{Research Area: }{\small Large scale online learning, text classification, collaborative filtering algorithm.}
+  \cventry{2004 -- 2008}{Bachelor}{Jiangsu University of Science and Technology}{Information and Computing Sciences}{}{}
+
+\section{Work Background}
+  \cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{Microsoft STC}{Beijing}{}{Campaign recommendation, bidding and budget suggestion.}
+  \cventry{2011.4 -- 2012.8}{Applied Research Engineer}{Netease Youdao}{Beijing}{}{Crawler, webpage parser and analyzer, ranking.}
 
 \section{Technical Ability}
-\cvitem{Programming Language}{Java, Python, C, Matlab.}
-\cvitem{Operating System}{Linux/Unix,including commands,toolchain,scripts.}
-\cvitem{Profiling}{Algorithm profiling, system profiling.}
-\cvitem{Large-Scale Data Processing}{Youdao's Map-Reduce/Big Table implementation - Cowork,ODFS etc.}
-\cvitem{Data Mining}{Familiar with common models and algorithms of Data Mining, has in-depth study of online learning,text classification and recommender system.}
-\cvitem{English}{471 points in CET-6,good English reading and speaking ability.}
-\cvitem{Math}{Solid math foundation.}
+  \cvitem{Programming Language}{Java, Python, C, Scala, C\#, Matlab, SQL.}
+  \cvitem{Database Technology}{SQL Server, Mongodb, Kyoto Cabinet, Self implemented DHT.}
+  \cvitem{Profiling}{Algorithm profiling, service profiling.}
+  \cvitem{Large-Scale Data Processing}{Experienced with big data processing technology, familiar with several stacks including Cowork/ODFS/Omap in Youdao and Cosmos in Microsoft.}
+  \cvitem{Data Mining}{Familiar with common models and algorithms of Data Mining, has in-depth study of online learning, text classification and collaborative filtering algorithms.}
+  \cvitem{English}{471 points in CET-6, good English reading and speaking ability.}
+  \cvitem{Math}{Solid math foundation.}
 
 \section{Projects}
-\subsection{Timeliness Web Crawler}
-\cvitem{Introduction}{Crawl news from portal sites, forums, microblogs with low latency.}
-\cvitem{Timeline}{2011.10 -- 2012.4}
-\cvitem{Duty}{Project leader and the only programmer.}
-\cvitem{Results}{The rate of timeliness coverage is catching up with Baidu.}
-\subsection{Efficiency optimization of DNS Resolve}
-\cvitem{Introduction}{The DNS refresh rate is not enough.}
-\cvitem{Timeline}{2011.4 -- 2011.6}
-\cvitem{Duty}{Project leader and the only programmer.}
-\cvitem{Results}{DNS resolve is speeding up by an order of magnitude.}
-\subsection{The Application of incremental SVMs in Large-Scale Email Spam Filtering}
-\cvitem{Introduction}{National 863 Project}
-\cvitem{Timeline}{2008 -- 2009}
-\cvitem{Duty}{Project leader,I built the architecture of our TGANG system and implemented
-most classiﬁers.}
-\cvitem{Results}{The TGANG system is in a leading position internationally both in accuracy
-and eﬃciency.}
-\subsection{Terminator}
-\cvitem{Introduction}{Individual projects,a two-layer ensemble spam filter.}
-\cvitem{url}{\url{https://code.google.com/p/terminator/}}
-\cvitem{Timeline}{2009 -- 2010}
-\cvitem{Results}{ensemble 8 advanced classifiers, can achieve the best results on \emph{All} public datasets.}
-
+  \subsection{Product Recommendation Service}
+    \cvitem{Introduction}{Recommend inventories to advertisers in display advertising business.}
+    \cvitem{Timeline}{2012.9 -- 2013.4}
+    \cvitem{Duty}{Experiments and algorithms implementation including content-based and collaborative filtering algorithms, and common utility such as logging and profiling.}
+    \cvitem{Results}{The feedbacks from users are mostly positive, though lack of instrumentation data.}
+  \subsection{Timeliness Web Crawler}
+    \cvitem{Introduction}{Crawl news from portal sites, forums, microblogs with low latency.}
+    \cvitem{Timeline}{2011.10 -- 2012.4}
+    \cvitem{Duty}{Project leader with three team members.}
+    \cvitem{Results}{The timeliness coverage rate has been catching up with Baidu.}
+  \subsection{Efficiency optimization of DNS Resolve}
+    \cvitem{Introduction}{The DNS lookup rate was becoming the bottleneck of main crawler's efficiency and we try to speedup it.}
+    \cvitem{Timeline}{2011.4 -- 2011.6}
+    \cvitem{Duty}{Project leader and the only programmer.}
+    \cvitem{Results}{The rate of DNS resolving has been sped up by an order of magnitude.}
+  \subsection{The Application of incremental SVMs in Large-Scale Email Spam Filtering}
+    \cvitem{Introduction}{National 863 Project}
+    \cvitem{Timeline}{2008 -- 2009}
+    \cvitem{Duty}{Project leader, I have built the architecture of our system and implemented most classifiers.}
+    \cvitem{Results}{The spam filtering system named TGANG is in a leading position internationally both in accuracy and efficiency.}
+  \subsection{Terminator}
+    \cvitem{Introduction}{Individual projects, a two-layer ensemble spam filter.}
+    \cvitem{url}{\url{https://code.google.com/p/terminator/}}
+    \cvitem{Timeline}{2009 -- 2010}
+    \cvitem{Results}{Ensemble 8 advanced classifiers, can achieve the best results on \emph{All} public datasets.}
+  
 \section{Experience}
-\subsection{Scholarship}
-\cvitem{2009}{Second Prize Scholarship of Zhejiang University.}
-\subsection{Open Source}
-\cvitem{2010}{Wrote the NSNB spam ﬁlter in Python, which won the ﬁrst place in large-scale spam ﬁltering
-competition of Eights Symposium of Search Engine and Web Mining. Now NSNB is open
-sourced at \url{http://code.google.com/p/nsnb}.}
-\subsection{Publications}
-\cvlistitem{Baojun Su, Congfu Xu. Not so naive online Bayesian spam filter. In: Proceedings of the 21st conference on Innovative Application of Artificial Intelligence (IAAI 2009), July 14-16, 2009, Pasadena, CA, pages 147-152.}
-\cvlistitem{Congfu Xu, Chunliang Hao, Baojun Su. Research on Markov logic networks. Chinese Journal of Software, 2011, 22(8): 1699-1713. (In Chinese with English abstract)}
+  \subsection{Scholarship}
+    \cvitem{2009}{Second Prize Scholarship of Zhejiang University.}
+  \subsection{Open Source}
+    \cvitem{2010}{Wrote the NSNB spam filter in Python, which won the first place in large-scale spam filtering competition of Eights Symposium of Search Engine and Web Mining. Now NSNB is open sourced at \url{http://code.google.com/p/nsnb}.}
+  \subsection{Publications}
+    \cvlistitem{Baojun Su, Congfu Xu. Not so na\"{i}ve online Bayesian spam filter. In: Proceedings of the 21st conference on Innovative Application of Artificial Intelligence (IAAI 2009), July 14-16, 2009, Pasadena, CA, pages 147-152.}
+    \cvlistitem{Congfu Xu, Chunliang Hao, Baojun Su. Research on Markov logic networks. Chinese Journal of Software, 2011, 22(8): 1699-1713. (In Chinese with English abstract)}
 
 \section{Self Assessment}
-\cvitem{}{I am a quick learner, with rich developing experience and good understanding of
-pattern recognition and machine learning.}
+  \cvitem{}{I am a quick learner and nice team member, with rich developing experience and good understanding of pattern recognition and machine learning.}
 
 \end{document}
