Change the structure of this little project

--- a/src/JingZhao-Resume.tex
+++ b/src/JingZhao-Resume.tex
@@ -1,11 +1,11 @@
-\input{../Style/default}
+\input{style/default}
 
 % personal data
 \firstname{Jing}
 \familyname{Zhao}
 \mobile{13552408628}
 \email{feiyang0391@gmail.com}
-\photo[64pt]{avatar.jpg}   
+\photo[64pt]{pic/avatar.jpg}   
 \quote{Work with Assiduity}      
 
 %----------------------------------------------------------------------------------
