--- a/src/赵晶-简历.tex
+++ b/src/赵晶-简历.tex
@@ -1,11 +1,11 @@
-\input{../Style/default}
+\input{style/default}
 
 % personal data
 \firstname{\xinwei{赵晶}}
 \familyname{}
 \mobile{13552408628}
 \email{feiyang0391@gmail.com}
-\photo[64pt]{avatar.jpg}
+\photo[64pt]{pic/avatar.jpg}
 \quote{认真做好每一件事}
 
 %----------------------------------------------------------------------------------
