Add more work experience for Jing

--- a/src/赵晶-简历.tex
+++ b/src/赵晶-简历.tex
@@ -19,10 +19,11 @@
 \cvcomputer{出生日期：}{1985-4-7}{政治面貌：}{中共党员}
 
 \section{\fs{教育背景}}
-\cventry{2009--2012}{\textit{研究生}}{苏州大学}{无机化学}{GPA~前~5\%}{}
-\cventry{2005--2009}{\textit{本科}}{洛阳师范学院}{化学}{GPA~前~5\%}{}
+\cventry{2009 -- 2012}{\textit{研究生}}{苏州大学(211)}{无机化学}{GPA~前~5\%}{}
+\cventry{2005 -- 2009}{\textit{本科}}{洛阳师范学院}{化学}{GPA~前~5\%}{}
 
 \section{\fs{工作背景}}
+\cventry{2012.11 -- ~~~~~~~~~~~~~}{内部招聘顾问}{上海科锐福克斯人才顾问有限公司}{北京}{}{公司内部人员招聘}
 \cventry{2012.07 -- 2012.08}{高级商务经理}{高阳捷迅信息技术有限公司}{北京}{}{商务拓展}
 \cventry{2011.10 -- 2011.11}{猎头顾问助理}{科锐国际人力资源有限公司}{苏州}{}{市场调研}
 
@@ -42,6 +43,7 @@
 \cvline{\kai{论文}}{七篇~SCI~索引论文，四篇第一作者、两篇第二作者、一篇第三作者}
 
 \section{\fs{自我评价}}
-\cvline{}{三年的研究生经历，对于学习能力有了更进一步的提高，具有沉稳的学习气质以及积极地学习热情，平时协助导师管理实验室大小事务，具备良好的沟通能力和组织协调能力}
+% \cvline{}{三年的研究生经历，对于学习能力有了更进一步的提高，具有沉稳的学习气质以及积极地学习热情，平时协助导师管理实验室大小事务，具备良好的沟通能力和组织协调能力}
+\cvline{}{热爱生活、性格开朗、善于沟通，喜欢解决困难带来的征服感；爱摄影爱文字，爱摆弄花花草草……坚持工作是为了更好生活的理念，绝不混日子；有强悍的学习能力和适应能力，期望着有一份能把兴趣和挣钱牢牢捆绑在一起的工作，并为之勇敢奋斗着~~ }
 
 \end{document}
