Add work experience of Jing

--- a/src/JingZhao-Resume.tex
+++ b/src/JingZhao-Resume.tex
@@ -23,8 +23,9 @@
 \cventry{2005--2009}{\textit{Bachelor}}{Luoyang Normal University}{Chemistry}{The top 5\% GPA}{}
 
 \section{Work Experience}
+\cventry{2012.11 -- }{Internal Staffing Consultant}{Careerfocus Human Resources Consulting Co.,Ltd., Beijing Branch}{Beijing}{}{Recruitment}
 \cventry{2012.07 -- 2012.08}{Senior Business Manager}{Beijing Gaoyang Jiexun Information Technology Co., Ltd.}{Beijing}{}{Business Development}
-\cventry{2011.10 -- 2011.11}{Consultant Assistant}{Career International}{Suzhou}{}{Market Research}
+\cventry{2011.10 -- 2011.11}{Researcher}{Career International}{Suzhou}{}{Market Research}
 
 \section{Skill}
 \cvline{Office Software}{Proficiency in the use of Word, Excel, PowerPoint and Photoshop etc.}
@@ -32,10 +33,10 @@
 \cvline{Soft Skills}{Good at organizing activities and verbal expression.}
 
 \section{Honour}
-\cvline{2012}{Gain 7 offers on Tianjin television's "You are the one!" program (2012.03.12).}
+\cvline{2012}{Gain 7 offers on Tianjin television's ``You are the one!" program (2012.03.12).}
 \cvline{2011}{First Class Scholarship of Soochow University.}
 \cvline{2009}{Outstanding member of the CPR.}
-\cvline{2006}{Title of `'Social Practice Advanced Individual" by Luoyang city.}
+\cvline{2006}{Title of ``Social Practice Advanced Individual" by Luoyang city.}
 
 \section{Research}
 \cvline{Projects}{Core member of two National Natural Science Foundation projects (No.20771077 and the other is Confidential).}
