--- a/src/style/default.tex
+++ b/src/style/default.tex
@@ -5,9 +5,9 @@
 
 % 以下是英文字体的设置
 \defaultfontfeatures{Scale=MatchLowercase} % 这个参数保证 serif、sans-serif 和 monospace 字体在小写时大小匹配
-\setmainfont[Numbers=OldStyle,Mapping=tex-text]{Arial} % 使用 Garamond 字体，把数字设置为等宽，比较好看
+\setmainfont[Numbers=OldStyle,Mapping=tex-text]{Garamond} % 使用 Garamond 字体，把数字设置为等宽，比较好看
 \setsansfont[Mapping=tex-text]{Arial} % 使用 XeTeX 的 text-mapping 方案，正确显示 LaTeX 样式的双引号（`` ''）
-\setmonofont{Menlo}
+\setmonofont{Source Code Pro}
 \XeTeXlinebreaklocale "zh"
 \widowpenalty=10000
 
