--- a/src/苏保君-简历.tex
+++ b/src/苏保君-简历.tex
@@ -1,4 +1,4 @@
-\input{style/default}
+\input{style/chinese}
 
 % personal data
 \firstname{\xinwei{苏保君}}
@@ -19,7 +19,7 @@
 \cventry{2004 -- 2008}{学士}{江苏科技大学}{信息与计算科学}{}{}
 
 \section{\fs{工作背景}}
-\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{微软亚洲工程院}{北京}{}{展示广告、推荐系统}
+\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{微软亚洲搜索技术研发中心}{北京}{}{展示广告、推荐系统}
 \cventry{2011.4 -- 2012.8}{应用研究工程师}{网易有道}{北京}{}{主要负责网页搜索的抓取、解析以及购物搜索的排序}
 
 \section{\fs{技能}}
