change pic path

--- a/src/JingZhao-Resume.tex
+++ b/src/JingZhao-Resume.tex
@@ -5,7 +5,7 @@
 \familyname{Zhao}
 \mobile{13552408628}
 \email{feiyang0391@gmail.com}
-\photo[64pt]{pic/avatar.jpg}   
+\photo[64pt]{../pic/Jing.jpg}   
 \quote{Work with Assiduity}      
 
 %----------------------------------------------------------------------------------
