--- a/src/赵晶-简历.tex
+++ b/src/赵晶-简历.tex
@@ -5,7 +5,7 @@
 \familyname{}
 \mobile{13552408628}
 \email{feiyang0391@gmail.com}
-\photo[64pt]{pic/avatar.jpg}
+\photo[64pt]{../pic/Jing.jpg}
 \quote{认真做好每一件事}
 
 %----------------------------------------------------------------------------------
