Structure Revise and minor changes

--- a/src/JingZhao-Resume-English.tex
+++ b/src/JingZhao-Resume-English.tex
@@ -1,6 +1,6 @@
 \input{style/english}
 
-% personal data
+% Personal data
 \firstname{Jing}
 \familyname{Zhao}
 \mobile{13552408628}
@@ -8,12 +8,10 @@
 \photo[64pt]{../pic/Jing.jpg}   
 \quote{Work with Assiduity}      
 
-%----------------------------------------------------------------------------------
-%            content
-%----------------------------------------------------------------------------------
+% Content
 \begin{document}
 \maketitle
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Basic Information}
 \cvcomputer{Name}{Jing Zhao}{Gender}{Female}
 \cvcomputer{Birthday}{1985-4-7}{}{}
