--- a/src/style/chinese.tex
+++ b/src/style/chinese.tex
@@ -9,7 +9,7 @@
 \setsansfont[Scale=0.95]{Optima Regular}
 \setmonofont[Scale=0.85]{Source Code Pro}
 
-% 以下是中文字体的设置
+% Chinese font settings
 \usepackage[slantfont,boldfont,CJKnumber]{xeCJK}
 \xeCJKsetup{
     AutoFakeBold=false,
