--- a/src/BaojunSu-Resume-Chinese.tex
+++ b/src/BaojunSu-Resume-Chinese.tex
@@ -1,13 +1,11 @@
 \input{style/chinese}
 
-% Personal data
 \firstname{\xinwei{苏保君}}
 \familyname{}
-\mobile{+86(010)13439819854}                    
+\mobile{+86(512)18625240866}                    
 \email{freizsu@gmail.com}
 \quote{认真做好每一件事}                 
 
-% Content
 \begin{document}
 \maketitle
 
@@ -17,57 +15,55 @@
 \cventry{2004 -- 2008}{学士}{江苏科技大学}{信息与计算科学}{}{}
 
 \section{\fs{工作背景}}
-\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{微软亚洲搜索技术研发中心}{北京}{}{展示广告、推荐系统}
-\cventry{2011.4 -- 2012.8}{应用研究工程师}{网易有道}{北京}{}{主要负责网页搜索的抓取、解析以及购物搜索的排序}
+\cventry{2012.9 -- ~~~~~~~~~~}{软件开发工程师}{微软亚洲搜索技术研发中心}{苏州}{}{分布式键值数据存储、推荐系统}
+\cventry{2011.4 -- 2012.8}{应用研究工程师}{网易有道}{北京}{}{网页搜索的抓取、解析以及购物搜索的排序}
 
 \section{\fs{技能}}
-\cvitem{编程语言}{Java, Python, C, Scala, C\#, Matlab, SQL}
-\cvitem{数据库}{SQL Server, Mongodb, Kyoto Cabinet, 分布式哈希表}
+\cvitem{编程语言}{Java, Python, C, C\#, Matlab, SQL}
+\cvitem{数据库}{SQL Server, Mongodb, Kyoto Cabinet, 分布式键值数据存储}
 \cvitem{调优}{擅长算法调优、系统调优}
 \cvitem{大规模数据处理}{熟悉大规模数据处理技术，包括有道的~CoWork、ODFS、OMap~等以及微软的~Cosmos}
 \cvitem{数据挖掘}{熟悉机器学习、数据挖掘中的常用模型和算法，对在线学习、文本分类和推荐系统方面有深入研究}
 \cvitem{英语}{六级471分，具有良好的英文文档阅读及口语表达能力}
-\cvitem{数学}{数学基本功扎实}
 
 \section{\fs{项目}}
-\subsection{\fs{广告推荐系统}}
-\cvitem{介绍}{在展示广告系统中为广告主推荐广告位}
-\cvitem{时间}{2012.9 -- 2013.4}
-\cvitem{职责}{负责协同过滤及基于语义的推荐算法设计实现，以及评估算法的设计实现}
-\cvitem{效果}{得到了大部分用户的好评，准确率从~66\%~提升到了~73\%}
-\subsection{\fs{时效性网页抓取}}
-\cvitem{介绍}{分钟级的延迟抓取新闻、论坛、微博等时效性信息}
-\cvitem{时间}{2011.10 -- 2012.4}
-\cvitem{职责}{项目负责人及唯一开发人员}
-\cvitem{效果}{有道的时效性结果从上线前的几乎无结果到上线后后台覆盖率接近百度的水平}
-\subsection{\fs{DNS查询效率优化}}
-\cvitem{介绍}{优化前dns每天解析量太小，不能满足大规模抓取需要}
-\cvitem{时间}{2011.4 -- 2011.6}
-\cvitem{职责}{项目负责人及唯一开发人员}
-\cvitem{效果}{将底层dns解析从同步改为异步，查询效率提升了一个数量级}
-\subsection{\fs{集成化~SVM~增量技术及其在大规模垃圾邮件过滤中的应用}}
-\cvitem{介绍}{隶属于国家 863 计划智能感知与先进计算专题,侧重于工程实现}
-\cvitem{时间}{2008 -- 2009}
-\cvitem{职责}{项目负责人}
-\cvitem{效果}{负责设计~TGANG~邮件过滤器系统架构并实现了大部分在线分类器, TGANG 系统无论从过滤准确率还是运行效率在国际上都处于领先地位}
-\subsection{\fs{Terminator}}
-\cvitem{介绍}{个人项目，两层集成垃圾邮件过滤器}
-\cvitem{项目地址}{\url{https://code.google.com/p/terminator/}}
-\cvitem{时间}{2009 -- 2010}
-\cvitem{效果}{集成了8个优秀分类器，在所有数据集上都能得到最优结果，被某outlook插件作为算法核心}
+  
+  \subsection{\fs{分布式键值数据存储}}
+  \cvitem{介绍}{分布式键值数据存储，在线服务~TB~级数据同时具有较小的延时，可插入~SPROC~执行逻辑}
+  \cvitem{时间}{2013.10 -- 2014.9}
+  \cvitem{职责}{系统设计、部分实现、调优}
+  \cvitem{效果}{对比之前线上~SQL Server~系统，同样的请求~.95~减小了3-10倍，同时提高了灵活性和~SPROC~的可读性}
+
+  \subsection{\fs{广告推荐系统}}
+  \cvitem{介绍}{在展示广告系统中为广告主推荐广告位}
+  \cvitem{时间}{2012.9 -- 2013.4}
+  \cvitem{职责}{协同过滤及基于语义的推荐算法设计实现，以及评估算法的设计实现}
+  \cvitem{效果}{得到了大部分用户的好评，准确率从~66\%~提升到了~73\%}
+
+  \subsection{\fs{时效性网页抓取}}
+  \cvitem{介绍}{分钟级的延迟抓取新闻、论坛、微博等时效性信息}
+  \cvitem{时间}{2011.10 -- 2012.4}
+  \cvitem{职责}{系统设计、调优}
+  \cvitem{效果}{有道的时效性结果从上线前的几乎无结果到上线后后台覆盖率接近百度的水平}
+
+  \subsection{\fs{DNS~查询效率优化}}
+  \cvitem{介绍}{优化前~DNS~解析吞吐量太小，不能满足大规模抓取需要}
+  \cvitem{时间}{2011.4 -- 2011.6}
+  \cvitem{职责}{优化~DNS~系统查询效率}
+  \cvitem{效果}{通过将底层~DNS~解析从同步~IO~改为异步~IO，查询效率提高了~10~倍}
+
+  \subsection{\fs{Terminator}}
+  \cvitem{介绍}{个人项目，两层集成垃圾邮件过滤器}
+  \cvitem{项目地址}{\url{https://github.com/freiz/terminator}}
+  \cvitem{时间}{2009 -- 2010}
+  \cvitem{效果}{实现了自创的在线集成算法，集成了8个优秀分类器，在所有公开数据集上都取得最优结果，被某outlook插件作为算法核心}
 
 \section{\fs{经历}}
-\cvitem{2009}{校优秀研究生二等奖}
-\cvitem{2010}{使用~Python~独立开发了~NSNB~邮件过滤系统,并以此获得了~SEWM2010~(第八届全国搜 索引擎和网上信息挖掘学术研讨会)大规模垃圾邮件过滤比赛综合第一名，NSNB~项目目 前开源,项目地址是: \url{http://code.google.com/p/nsnb/}}
+\cvitem{2010}{使用~Python~独立开发了~NSNB~邮件过滤算法,并以此获得了~SEWM2010~(第八届全国搜 索引擎和网上信息挖掘学术研讨会)大规模垃圾邮件过滤比赛综合第一名，NSNB~项目目前开源,项目地址是: \url{http://code.google.com/p/nsnb/}}
 \cvitem{2010}{所开发的《基于内容的多分类器多层垃圾邮件实时过滤系统软件》获得了计算机软件著 作版权登记证书}
-\cvitem{2011}{网易有道网页搜索平台组季度标兵}
-\subsection{\fs{发表论文}}
+
+\section{\fs{发表论文}}
 \cvlistitem{Baojun Su, Congfu Xu. Not so na\"{i}ve online Bayesian spam filter. In: Proceedings of the 21st conference on Innovative Application of Artificial Intelligence (IAAI 2009), July 14-16, 2009, Pasadena, CA, pages 147-152.}
 \cvlistitem{Congfu Xu, Chunliang Hao, Baojun Su. Research on Markov logic networks. Chinese Journal of Software, 2011, 22(8): 1699-1713. (In Chinese with English abstract)}
-
-\section{\fs{自我评价}}
-\cvlistitem{学习能力强，做事认真心细}
-\cvlistitem{写程序、理论研究两方面都能独当一面}
-\cvlistitem{具有良好的团队协作能力}
 
 \end{document}
