Remove the Alernative=1 from fontspec

--- a/src/style/chinese.tex
+++ b/src/style/chinese.tex
@@ -4,7 +4,7 @@
 
 % English font settings
 \defaultfontfeatures{Mapping=tex-text, Numbers={OldStyle}}
-\setmainfont[Ligatures={Common, Rare}, Alternate=1]{Hoefler Text}
+\setmainfont[Ligatures={Common, Rare, Historical}]{Hoefler Text}
 \setsansfont[Scale=0.95]{Optima Regular}
 \setmonofont[Scale=0.85]{Source Code Pro}
 
