Add simple rakefile to generate pdf
- change some minor thing in writing

--- a/src/BaojunSu-Resume-English.tex
+++ b/src/BaojunSu-Resume-English.tex
@@ -16,11 +16,11 @@
 
 \section{Work Background}
 \cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{Microsoft STC}{Suzhou}{}{Distributed key-value datastore, campaign recommendation.}
-\cventry{2011.4 -- 2012.8}{Applied Research Engineer}{Netease Youdao}{Beijing}{}{Crawler, webpage parser and analyzer, ranking.}
+\cventry{2011.4 -- 2012.8}{Applied Research Engineer}{Netease Youdao}{Beijing}{}{Crawler, web page parser and analyzer, ranking.}
 
 \section{Technical Ability}
 \cvitem{Programming Language}{Java, Python, C, C\#, Matlab, SQL.}
-\cvitem{Database Technology}{SQL server, mongodb, kyoto cabinet, self implemented distributed key-value datastore.}
+\cvitem{Database Technology}{SQL Server, Mongodb, Kyoto Cabinet, self implemented distributed key-value datastore.}
 \cvitem{Profiling}{Algorithm profiling, service profiling.}
 \cvitem{Large-Scale Data Processing}{Experienced with big data processing technology, familiar with several stacks including CoWork/ODFS/OMap in Youdao and Cosmos in Microsoft.}
 \cvitem{Data Mining}{Familiar with common models and algorithms of data mining, has in-depth study of online learning, text classification and collaborative filtering algorithms.}
@@ -56,7 +56,7 @@
   \cvitem{Introduction}{A two-layer ensemble spam filter, open sourced at github.}
   \cvitem{url}{\url{https://github.com/freiz/terminator}}
   \cvitem{Timeline}{2009 -- 2010}
-  \cvitem{Results}{Implemented my ensemble algorithm and ensembled 8 advanced classifiers, can achieve the best results on \emph{All} public datasets.}
+  \cvitem{Results}{Implemented my ensemble algorithm and ensemble 8 advanced classifiers, can achieve the best results on \emph{All} public datasets.}
 
 \section{Experience}
 
