--- a/src/JingZhao-Resume-Chinese.tex
+++ b/src/JingZhao-Resume-Chinese.tex
@@ -37,7 +37,7 @@
 \cvline{2006}{组织并参加洛阳师范学院下乡支教活动，获得洛阳市社会实践先进个人称号}
 
 \section{\fs{科研}}
-\cvline{\kai{项目}}{作为组内核心参与了两项国家自然科学基金项目（No.20771077、）}
+\cvline{\kai{项目}}{作为组内核心参与了两项国家自然科学基金项目（No.20771077）}
 \cvline{\kai{论文}}{七篇~SCI~索引论文，四篇第一作者、两篇第二作者、一篇第三作者}
 
 \section{\fs{自我评价}}
