update the content to date.

--- a/src/BaojunSu-Resume-Chinese.tex
+++ b/src/BaojunSu-Resume-Chinese.tex
@@ -15,7 +15,7 @@
 \cventry{2004 -- 2008}{学士}{江苏科技大学}{信息与计算科学}{}{}
 
 \section{\fs{工作背景}}
-\cventry{2012.9 -- ~~~~~~~~~~}{软件开发工程师}{微软亚洲搜索技术研发中心}{苏州}{}{分布式键值数据存储、推荐系统}
+\cventry{2012.9 -- ~~~~~~~~~~}{软件开发工程师 II}{微软亚洲搜索技术研发中心}{苏州}{}{分布式键值数据存储、推荐系统}
 \cventry{2011.4 -- 2012.8}{应用研究工程师}{网易有道}{北京}{}{网页搜索的抓取、解析以及购物搜索的排序}
 
 \section{\fs{技能}}
@@ -29,10 +29,10 @@
 \section{\fs{项目}}
   
   \subsection{\fs{分布式键值数据存储}}
-  \cvitem{介绍}{分布式键值数据存储，在线服务~TB~级数据同时具有较小的延时，可插入~SPROC~执行逻辑}
+  \cvitem{介绍}{分布式键值数据存储，在线服务~TB~级数据同时具有较小的延时，性能可以线性水平扩展，可插入~SPROC~执行逻辑}
   \cvitem{时间}{2013.10 -- 2014.9}
   \cvitem{职责}{系统设计、部分实现、调优}
-  \cvitem{效果}{对比之前线上~SQL Server~系统，同样的请求~.95~减小了3-10倍，同时提高了灵活性和~SPROC~的可读性}
+  \cvitem{效果}{对比之前线上~SQL Server~系统，同样的请求~.95~减小了10倍，同时提高了灵活性和~SPROC~的可读性}
 
   \subsection{\fs{广告推荐系统}}
   \cvitem{介绍}{在展示广告系统中为广告主推荐广告位}
@@ -63,6 +63,7 @@
 \cvitem{2010}{所开发的《基于内容的多分类器多层垃圾邮件实时过滤系统软件》获得了计算机软件著 作版权登记证书}
 
 \section{\fs{发表论文}}
+\cvlistitem{Congfu Xu, Baojun Su, Yunbiao Cheng, Weike Pan, Li Chen, "An Adaptive Fusion Algorithm for Spam Detection", IEEE Intelligent Systems, vol.29, no. 4, pp. 2-8, July-Aug. 2014, doi:10.1109/MIS.2013.54}
 \cvlistitem{Baojun Su, Congfu Xu. Not so na\"{i}ve online Bayesian spam filter. In: Proceedings of the 21st conference on Innovative Application of Artificial Intelligence (IAAI 2009), July 14-16, 2009, Pasadena, CA, pages 147-152.}
 \cvlistitem{Congfu Xu, Chunliang Hao, Baojun Su. Research on Markov logic networks. Chinese Journal of Software, 2011, 22(8): 1699-1713. (In Chinese with English abstract)}
 
