--- a/src/BaojunSu-Resume-English.tex
+++ b/src/BaojunSu-Resume-English.tex
@@ -15,7 +15,7 @@
 \cventry{2004 -- 2008}{Bachelor}{Jiangsu University of Science and Technology}{Information and Computing Sciences}{}{}
 
 \section{Work Background}
-\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer}{Microsoft STC}{Suzhou}{}{Distributed key-value datastore, campaign recommendation.}
+\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer II}{Microsoft STC}{Suzhou}{}{Distributed key-value datastore, campaign recommendation.}
 \cventry{2011.4 -- 2012.8}{Applied Research Engineer}{Netease Youdao}{Beijing}{}{Crawler, web page parser and analyzer, ranking.}
 
 \section{Technical Ability}
@@ -29,10 +29,10 @@
 \section{Projects}
 
   \subsection{Distributed Key-Value Datastore}
-  \cvitem{Introduction}{Online serving data in TB and at the same time with low latency, with the ability to plugin user logic as SPROC.}
+  \cvitem{Introduction}{Online serving datastore, serving TB data with low latency and can scale out horizontally, with the ability to plugin user logic as SPROC.}
   \cvitem{Timeline}{2013.10 -- 2014.9}
   \cvitem{Duty}{System design, part of implementation, performance tuning.}
-  \cvitem{Results}{Compared to the old system hosted on SQL Server, the .95 has been reduced to 1/3 to 1/10 with the same request, and at the same time increased the flexibility and the readability of SPROC.}
+  \cvitem{Results}{Compared to the old system hosted on SQL Server, the .95 has been reduced to 1/10 with the same request, and at the same time increased the flexibility and the readability of SPROC.}
 
   \subsection{Product Recommendation Service}
   \cvitem{Introduction}{Recommend inventories to advertisers in display advertising business.}
@@ -64,6 +64,7 @@
   \cvitem{2010}{NSNB spam filter won the first place in large-scale spam filtering competition of Eights Symposium of Search Engine and Web Mining, which is implemented in Python and open sourced at \url{http://code.google.com/p/nsnb}.}
 
 \section{Publications}
+\cvlistitem{Congfu Xu, Baojun Su, Yunbiao Cheng, Weike Pan, Li Chen, "An Adaptive Fusion Algorithm for Spam Detection", IEEE Intelligent Systems, vol.29, no. 4, pp. 2-8, July-Aug. 2014, doi:10.1109/MIS.2013.54}
 \cvlistitem{Baojun Su, Congfu Xu. Not so na\"{i}ve online Bayesian spam filter. In: Proceedings of the 21st conference on Innovative Application of Artificial Intelligence (IAAI 2009), July 14-16, 2009, Pasadena, CA, pages 147-152.}
 \cvlistitem{Congfu Xu, Chunliang Hao, Baojun Su. Research on Markov logic networks. Chinese Journal of Software, 2011, 22(8): 1699-1713. (In Chinese with English abstract)}
 
