--- a/src/style/english.tex
+++ b/src/style/english.tex
@@ -1,19 +1,19 @@
-\documentclass[11pt,a4paper,roman,xelatex]{moderncv}
+\documentclass[10.5pt,a4paper,roman,xelatex]{moderncv}
 
 \usepackage{fontspec,xunicode,xltxtra} 
 
 % English font settings
-\defaultfontfeatures{Mapping=tex-text, Numbers={OldStyle}}
-\setmainfont[Ligatures={Common, Rare, Historical}]{Hoefler Text}
-\setsansfont[Scale=0.95]{Optima Regular}
-\setmonofont[Scale=0.85]{Source Code Pro}
+\defaultfontfeatures{Ligatures=TeX, Numbers={OldStyle}}
+\setmainfont{Hoefler Text}
+\setsansfont{Optima Regular}
+\setmonofont[Scale=0.90, Ligatures=NoCommon, Numbers={Lining, Monospaced}]{Source Code Pro}
 
 % Moderncv themes
 \moderncvtheme[blue]{classic}
 
 % Adjust the page margins
 \widowpenalty=10000
-\usepackage[scale=0.81]{geometry}
+\usepackage[scale=0.8]{geometry}
 \AtBeginDocument{\recomputelengths}
 
 \nopagenumbers{}
