--- a/src/BaojunSu-Resume-English.tex
+++ b/src/BaojunSu-Resume-English.tex
@@ -1,4 +1,3 @@
-\input{style/english}
 
 \firstname{Baojun}
 \familyname{Su}
@@ -15,15 +14,14 @@
 \cventry{2004 -- 2008}{Bachelor}{Jiangsu University of Science and Technology}{Information and Computing Sciences}{}{}
 
 \section{Work Background}
-\cventry{2012.9 -- ~~~~~~~~~~}{Software Develop Engineer II}{Microsoft STC}{Suzhou}{}{Distributed key-value datastore, campaign recommendation.}
+\cventry{2012.9 -- ~~~~~~~~~~}{Sr. Software Engineer}{Microsoft STC}{Suzhou}{}{Ads platform, distributed key-value datastore}
 \cventry{2011.4 -- 2012.8}{Applied Research Engineer}{Netease Youdao}{Beijing}{}{Crawler, web page parser and analyzer, ranking.}
 
 \section{Technical Ability}
 \cvitem{Programming Language}{Java, Python, C, C\#, Matlab, SQL.}
-\cvitem{Database Technology}{SQL Server, Mongodb, Kyoto Cabinet, self implemented distributed key-value datastore.}
+\cvitem{Database Technology}{SQL Server, Mongodb, self implemented distributed key-value datastore.}
 \cvitem{Profiling}{Algorithm profiling, service profiling.}
-\cvitem{Large-Scale Data Processing}{Experienced with big data processing technology, familiar with several stacks including CoWork/ODFS/OMap in Youdao and Cosmos in Microsoft.}
-\cvitem{Data Mining}{Familiar with common models and algorithms of data mining, has in-depth study of online learning, text classification and collaborative filtering algorithms.}
+\cvitem{Machine Learning}{Familiar with common models and algorithms of data mining, has in-depth study of online learning, text classification and collaborative filtering algorithms.}
 \cvitem{English}{471 points in CET-6, good English reading and speaking ability.}
 
 \section{Projects}
@@ -33,12 +31,6 @@
   \cvitem{Timeline}{2013.10 -- 2014.9}
   \cvitem{Duty}{System design, part of implementation, performance tuning.}
   \cvitem{Results}{Compared to the old system hosted on SQL Server, the .95 has been reduced to 1/10 with the same request, and at the same time increased the flexibility and the readability of SPROC.}
-
-  \subsection{Product Recommendation Service}
-  \cvitem{Introduction}{Recommend inventories to advertisers in display advertising business.}
-  \cvitem{Timeline}{2012.9 -- 2013.4}
-  \cvitem{Duty}{Experiments and algorithms implementation including content-based and collaborative filtering algorithms, and common utility such as evaluation, profiling and instrumentation.}
-  \cvitem{Results}{The feedbacks from users are mostly positive, the accuracy improved from 66\% to 73\%.}
 
   \subsection{Timeliness Web Crawler}
   \cvitem{Introduction}{Crawl news from portal sites, forums, microblogs with low latency.}
