--- a/src/JingZhao-Resume-Chinese.tex
+++ b/src/JingZhao-Resume-Chinese.tex
@@ -1,6 +1,6 @@
 \input{style/chinese}
 
-\firstname{\xinwei{赵晶}}
+\firstname{赵晶}
 \familyname{}
 \mobile{18625240966}
 \email{feiyang0391@163.com}
@@ -10,36 +10,36 @@
 \begin{document}
 \maketitle
 
-\section{\fs{基本信息}}
+\section{基本信息}
 \cvcomputer{姓~~~~~~~~名：}{赵晶}{性~~~~~~~~别：}{女}
 \cvcomputer{出生日期：}{1985-4-7}{政治面貌：}{中共党员}
 \cvcomputer{婚育情况：}{已婚已育}{户籍情况：}{苏州园区户籍}
 
-\section{\fs{教育背景}}
+\section{教育背景}
 \cventry{2009 -- 2012}{\textit{研究生}}{苏州大学(211)}{无机化学}{GPA~前~5\%}{}
 \cventry{2005 -- 2009}{\textit{本科}}{洛阳师范学院}{化学}{GPA~前~5\%}{}
 
-\section{\fs{工作背景}}
+\section{工作背景}
 \cventry{2012.11 -- 2013.09}{内部招聘顾问}{上海科锐福克斯人才顾问有限公司}{北京}{}{公司内部人员招聘}
 \cventry{2012.07 -- 2012.08}{高级商务经理}{高阳捷迅信息技术有限公司}{北京}{}{商务拓展}
 \cventry{2011.10 -- 2011.11}{猎头顾问助理}{科锐国际人力资源有限公司}{苏州}{}{市场调研}
 
-\section{\fs{个人能力}}
-\cvline{\kai{办公软件}}{能熟练使用~Word、Excel、PowerPoint、Photoshop}
-\cvline{\kai{英语水平}}{托业~600~分、英语六级~434~分、良好的口语表达交流以及文献阅读能力}
-\cvline{\kai{软能力}}{善于组织协调活动、语言表达能力强}
+\section{个人能力}
+\cvline{办公软件}{能熟练使用~Word、Excel、PowerPoint、Photoshop}
+\cvline{英语水平}{托业~600~分、英语六级~434~分、良好的口语表达交流以及文献阅读能力}
+\cvline{软能力}{善于组织协调活动、语言表达能力强}
 
-\section{\fs{荣誉及社会活动}}
+\section{誉及社会活动}
 \cvline{2012}{参加《非你莫属(2012.03.12)》并获得七份~offer}
 \cvline{2011}{校优秀研究生一等奖学金}
 \cvline{2009}{苏州大学优秀党员}
 \cvline{2006}{组织并参加洛阳师范学院下乡支教活动，获得洛阳市社会实践先进个人称号}
 
-\section{\fs{科研}}
-\cvline{\kai{项目}}{作为组内核心参与了两项国家自然科学基金项目（No.20771077）}
-\cvline{\kai{论文}}{七篇~SCI~索引论文，四篇第一作者、两篇第二作者、一篇第三作者}
+\section{科研}
+\cvline{项目}{作为组内核心参与了两项国家自然科学基金项目（No.20771077）}
+\cvline{论文}{七篇~SCI~索引论文，四篇第一作者、两篇第二作者、一篇第三作者}
 
-\section{\fs{自我评价}}
+\section{自我评价}
 \cvline{}{热爱生活、性格开朗、善于沟通，喜欢解决困难带来的征服感；坚持工作是为了更好生活的理念，绝不混日子；有强悍的学习能力和适应能力，并能很好的实践于工作。}
 
 \end{document}
