--- a/src/style/chinese.tex
+++ b/src/style/chinese.tex
@@ -4,9 +4,9 @@
 
 % English font settings
 \defaultfontfeatures{Ligatures=TeX, Numbers={OldStyle}}
-\setmainfont{Hoefler Text}
-\setsansfont{Optima Regular}
-\setmonofont[Scale=0.90, Ligatures=NoCommon, Numbers={Lining, Monospaced}]{Source Code Pro}
+\setmainfont{Zilla Slab}
+\setsansfont{Roboto}
+\setmonofont[Scale=0.90, Ligatures=NoCommon, Numbers={Lining, Monospaced}]{Roboto Mono}
 
 % Chinese font settings
 \usepackage[slantfont,boldfont,CJKnumber]{xeCJK}
@@ -14,31 +14,9 @@
     AutoFakeBold=false,
     AutoFakeSlant=false,
 }
-\setCJKmainfont[BoldFont=Hiragino Sans GB, ItalicFont={STKaiti}]{STSong}
-\setCJKsansfont{Hiragino Sans GB}
-\setCJKmonofont{Hiragino Sans GB}
-\setCJKfamilyfont{song}{STSong}
-\setCJKfamilyfont{kai}{STKaiti}
-\setCJKfamilyfont{hei}{STHeiti}
-\setCJKfamilyfont{xinwei}{STXinwei}
-\setCJKfamilyfont{fs}{STFangsong}
-
-\newcommand\song{\CJKfamily{song}}
-\newcommand\kai{\CJKfamily{kai}}
-\newcommand\hei{\CJKfamily{hei}}
-\newcommand\xinwei{\CJKfamily{xinwei}}
-\newcommand\fs{\CJKfamily{fs}}
-
-\newcommand{\erhao}{\fontsize{22pt}{\baselineskip}\selectfont}
-\newcommand{\xiaoerhao}{\fontsize{18pt}{\baselineskip}\selectfont}
-\newcommand{\sanhao}{\fontsize{16pt}{\baselineskip}\selectfont}
-\newcommand{\xiaosanhao}{\fontsize{15pt}{\baselineskip}\selectfont}
-\newcommand{\sihao}{\fontsize{14pt}{\baselineskip}\selectfont}
-\newcommand{\xiaosihao}{\fontsize{12pt}{\baselineskip}\selectfont}
-\newcommand{\wuhao}{\fontsize{10.5pt}{\baselineskip}\selectfont}
-\newcommand{\xiaowuhao}{\fontsize{9pt}{\baselineskip}\selectfont}
-\newcommand{\liuhao}{\fontsize{7.5pt}{\baselineskip}\selectfont}
-
+\setCJKmainfont{Source Han Serif}
+\setCJKsansfont{Source Han Sans}
+\setCJKmonofont{Roboto Mono}
 \XeTeXlinebreaklocale "zh"
 
 % moderncv themes
