--- a/src/style/english.tex
+++ b/src/style/english.tex
@@ -4,9 +4,9 @@
 
 % English font settings
 \defaultfontfeatures{Ligatures=TeX, Numbers={OldStyle}}
-\setmainfont{Hoefler Text}
-\setsansfont{Optima Regular}
-\setmonofont[Scale=0.90, Ligatures=NoCommon, Numbers={Lining, Monospaced}]{Source Code Pro}
+\setmainfont{Zilla Slab}
+\setsansfont{Roboto}
+\setmonofont[Scale=0.90, Ligatures=NoCommon, Numbers={Lining, Monospaced}]{Roboto Mono}
 
 % Moderncv themes
 \moderncvtheme[blue]{classic}
